@@ -46,6 +46,7 @@
             "Tree" : "1.01",
             "feature" : "1.2",
             "open" : "1.08",
+            "parent" : "0.225",
             "strict" : "1.03",
             "warnings" : "1.03"
          }
@@ -58,6 +59,10 @@
       },
       "GraphViz2::Marpa::PathUtils::Config" : {
          "file" : "lib/GraphViz2/Marpa/PathUtils/Config.pm",
+         "version" : "1.01"
+      },
+      "GraphViz2::Marpa::PathUtils::Demo" : {
+         "file" : "lib/GraphViz2/Marpa/PathUtils/Demo.pm",
          "version" : "1.01"
       }
    },
