@@ -46,6 +46,7 @@
             "Tree" : "1.01",
             "feature" : "1.2",
             "open" : "1.08",
+            "parent" : "0.225",
             "strict" : "1.03",
             "warnings" : "1.03"
          }
