@@ -41,6 +41,7 @@ requires:
   Tree: 1.01
   feature: 1.2
   open: 1.08
+  parent: 0.225
   strict: 1.03
   warnings: 1.03
 resources:
