@@ -19,13 +19,13 @@ our $VERSION = '1.01';
 
 # -----------------------------------------------
 
-sub init
+sub _init
 {
 	my($self, $arg) = @_;
 
 	return from_hash($self, $arg);
 
-} # End of init.
+} # End of _init.
 
 # -----------------------------------------------
 
@@ -34,7 +34,7 @@ sub new
 	my($class, %arg) = @_;
     my($self)        = bless {}, $class;
 
-	$self -> init(\%arg);
+	$self -> _init(\%arg);
 
 	my($path) = Path::Class::file(File::HomeDir -> my_dist_config('GraphViz2-Marpa-PathUtils'), '.htgraphviz2.marpa.pathutils.conf');
 
@@ -103,7 +103,7 @@ L<GraphViz2::Marpa::PathUtils> provides various analyses of Graphviz dot files.
 
 =head1 Methods
 
-=head2 init()
+=head2 _init()
 
 For use by subclasses.
 
