@@ -1,0 +1,5 @@
+#!/bin/bash
+
+pod2html.pl -i lib/GraphViz2/Marpa/PathUtils.pm        -o /dev/shm/html/Perl-modules/html/GraphViz2/Marpa.PathUtils.html
+pod2html.pl -i lib/GraphViz2/Marpa/PathUtils/Config.pm -o /dev/shm/html/Perl-modules/html/GraphViz2/Marpa/PathUtils/Config.html
+pod2html.pl -i lib/GraphViz2/Marpa/PathUtils/Demo.pm   -o /dev/shm/html/Perl-modules/html/GraphViz2/Marpa/PathUtils/Demo.html
